# rules_dart_proto

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  analysis_options.yaml  multitool.lock.json
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh
dart_proto/: BUILD.bazel  analysis.bzl  defs.bzl  extensions.bzl  protoc_gen_dart_bazel_main.dart  protoc_gen_dart_main.dart  pubspec.yaml
dart_proto/private/: BUILD.bazel  analysis_package.bzl  dart_proto_library.bzl  toolchain.bzl
docs/: CHORES.md
e2e/analysis_pkg/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/analysis_pkg/echo/: BUILD.bazel  echo.proto
e2e/analysis_pkg/echo_analysis/: pubspec.yaml
e2e/analysis_pkg/echo_analysis/lib/: echo.pb.dart  echo.pbenum.dart  echo.pbjson.dart
e2e/deep_import_proto/: BUILD.bazel  MODULE.bazel  deep_import_test.dart  pubspec.yaml
e2e/deep_import_proto/app/frontend/: BUILD.bazel  event.proto
e2e/deep_import_proto/lib/shared/types/: BUILD.bazel  common.proto
e2e/deep_import_proto/services/api/v2/: BUILD.bazel  request.proto
e2e/diamond_proto/: BUILD.bazel  MODULE.bazel  diamond_test.dart  pubspec.yaml
e2e/diamond_proto/common/: BUILD.bazel  common.proto
e2e/diamond_proto/order/: BUILD.bazel  order.proto
e2e/diamond_proto/person/: BUILD.bazel  person.proto
e2e/grpc_proto/: BUILD.bazel  MODULE.bazel  client.dart  greeter.proto  pubspec.yaml  server.dart
e2e/grpc_proto/greeter/: BUILD.bazel
e2e/simple_proto/: BUILD.bazel  MODULE.bazel  address.proto  custom_pkg_main.dart  main.dart  multi_dep_main.dart  person.proto  proto_test.dart  pubspec.yaml
e2e/simple_proto/address/: BUILD.bazel
e2e/simple_proto/models/: BUILD.bazel  product.proto  user.proto
e2e/simple_proto/person/: BUILD.bazel  person.proto
