load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_dart//dart:defs.bzl", "dart_binary")

dart_binary(
    name = "protoc_gen_dart",
    main = "protoc_gen_dart_main.dart",
    visibility = ["//visibility:public"],
    deps = ["@dart_proto_deps//:protoc_plugin"],
)

dart_binary(
    name = "protoc_gen_dart_bazel",
    main = "protoc_gen_dart_bazel_main.dart",
    visibility = ["//visibility:public"],
    deps = ["@dart_proto_deps//:protoc_plugin"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//dart_proto/private:dart_proto_library"],
)

exports_files([
    "pubspec.lock",
    "pubspec.yaml",
])
