load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//dart_proto:__pkg__"],
    deps = ["@rules_dart//dart:providers"],
)

bzl_library(
    name = "dart_proto_library",
    srcs = ["dart_proto_library.bzl"],
    visibility = ["//dart_proto:__pkg__"],
    deps = [":toolchain"],
)

bzl_library(
    name = "analysis_package",
    srcs = ["analysis_package.bzl"],
    visibility = ["//dart_proto:__pkg__"],
    deps = [
        "@aspect_bazel_lib//lib:write_source_files",
        "@bazel_skylib//rules:write_file",
    ],
)
