"Analysis package e2e test"

module(name = "analysis_pkg_e2e")

bazel_dep(name = "rules_dart", version = "0.0.0")
bazel_dep(name = "rules_dart_proto", version = "0.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

local_path_override(
    module_name = "rules_dart_proto",
    path = "../..",
)

git_override(
    module_name = "rules_dart",
    remote = "https://github.com/aran/rules_dart.git",
    tag = "v0.1.3",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.1")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")

pub = use_extension("@rules_dart//dart/pub:extensions.bzl", "pub")
pub.from_lock(
    name = "pub_deps",
    lock = "//:pubspec.lock",
)
use_repo(pub, "dart_proto_deps", "pub_deps")

register_toolchains("//:dart_proto_toolchain")
