"Deep import proto e2e test — varied Bazel package depths"

module(name = "deep_import_proto_e2e")

bazel_dep(name = "rules_dart", version = "0.0.0")
bazel_dep(name = "rules_dart_proto", version = "0.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

local_path_override(
    module_name = "rules_dart_proto",
    path = "../..",
)

git_override(
    module_name = "rules_dart",
    remote = "https://github.com/aran/rules_dart.git",
    tag = "v0.1.3",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.1")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")
