"Deep import proto e2e test — varied Bazel package depths"

module(name = "deep_import_proto_e2e")

bazel_dep(name = "rules_dart", version = "0.2.1")
bazel_dep(name = "rules_dart_proto", version = "0.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")

local_path_override(
    module_name = "rules_dart_proto",
    path = "../..",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.4")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")

pub = use_extension("@rules_dart//dart/pub:extensions.bzl", "pub")
pub.from_lock(
    name = "pub_deps",
    lock = "//:pubspec.lock",
)
use_repo(pub, "dart_proto_deps", "pub_deps")

register_toolchains("//:dart_proto_toolchain")
