load("@rules_dart//dart:defs.bzl", "dart_binary")
load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_toolchain")

dart_proto_toolchain(
    name = "dart_proto_toolchain_impl",
    protobuf_runtime = "@pub_deps//:protobuf",
)

toolchain(
    name = "dart_proto_toolchain",
    toolchain = ":dart_proto_toolchain_impl",
    toolchain_type = "@rules_dart_proto//dart_proto:toolchain_type",
)

dart_binary(
    name = "diamond_test",
    main = "diamond_test.dart",
    deps = [
        "//common:common_dart_proto",
        "//order:order_dart_proto",
        "//person:person_dart_proto",
    ],
)
