load("@rules_dart//dart:defs.bzl", "dart_binary")

# Server binary — starts a gRPC server with the Greeter service.
dart_binary(
    name = "server",
    main = "server.dart",
    deps = ["//greeter:greeter_dart_proto"],
)

# Client binary — connects to the gRPC server and calls Greet.
dart_binary(
    name = "client",
    main = "client.dart",
    deps = ["//greeter:greeter_dart_proto"],
)
