"gRPC proto e2e test"

module(name = "grpc_proto_e2e")

bazel_dep(name = "rules_dart", version = "0.0.0")
bazel_dep(name = "rules_dart_proto", version = "0.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

local_path_override(
    module_name = "rules_dart_proto",
    path = "../..",
)

local_path_override(
    module_name = "rules_dart",
    path = "../../../rules_dart",
)

dart = use_extension("@rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(dart_version = "3.11.1")
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")
