load("@rules_dart//dart:defs.bzl", "dart_binary", "dart_test")

# Tests that proto messages with cross-proto imports can be used from Dart.
dart_binary(
    name = "app",
    main = "main.dart",
    deps = [
        "//address:address_dart_proto",
        "//person:person_dart_proto",
    ],
)

# Tests that package_name overrides the Dart package name for generated code.
dart_binary(
    name = "custom_pkg_app",
    main = "custom_pkg_main.dart",
    deps = ["//address:address_dart_proto"],
)

dart_test(
    name = "proto_test",
    main = "proto_test.dart",
    deps = [
        "//address:address_dart_proto",
        "//models:models_dart_proto",
        "//person:person_dart_proto",
    ],
)
