load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

dart_proto_library(
    name = "common_dart_proto",
    deps = [":common_proto"],
    visibility = ["//visibility:public"],
)
