load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "order_proto",
    srcs = ["order.proto"],
    deps = ["//common:common_proto"],
)

dart_proto_library(
    name = "order_dart_proto",
    dart_deps = ["//common:common_dart_proto"],
    visibility = ["//visibility:public"],
    deps = [":order_proto"],
)
