load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "models_proto",
    srcs = [
        "product.proto",
        "user.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//address:address_proto"],
)

dart_proto_library(
    name = "models_dart_proto",
    dart_deps = ["//address:address_dart_proto"],
    visibility = ["//visibility:public"],
    deps = [":models_proto"],
)
