load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
    deps = ["//address:address_proto"],
)

dart_proto_library(
    name = "person_dart_proto",
    dart_deps = ["//address:address_dart_proto"],
    deps = [":person_proto"],
    visibility = ["//visibility:public"],
)
