load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "types_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

dart_proto_library(
    name = "types_dart_proto",
    visibility = ["//visibility:public"],
    deps = [":types_proto"],
)
