load("@rules_dart_proto//dart_proto:defs.bzl", "dart_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "api_v2_proto",
    srcs = ["request.proto"],
    deps = ["//lib/shared/types:types_proto"],
    visibility = ["//visibility:public"],
)

dart_proto_library(
    name = "api_v2_dart_proto",
    dart_deps = ["//lib/shared/types:types_dart_proto"],
    deps = [":api_v2_proto"],
    visibility = ["//visibility:public"],
)
